--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,8 @@
     "customizations": {
         "vscode": {
             "extensions": [
-                "donjayamanne.python-extension-pack"
+                "donjayamanne.python-extension-pack",
+                "ms-python.autopep8"
             ]
         }
     },
